--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -1177,6 +1177,11 @@
     <script src="~/bootstrap/assets/plugins/charts-c3/d3.v5.min.js"></script>
     <script src="~/bootstrap/assets/plugins/charts-c3/c3-chart.js"></script>
 
+    <!-- INTERNAL Notifications js -->
+    <script src="~/bootstrap/assets/plugins/notify/js/rainbow.js"></script>
+    <script src="~/bootstrap/assets/plugins/notify/js/jquery.growl.js"></script>
+    <script src="~/bootstrap/assets/plugins/notify/js/notifIt.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
