--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -475,7 +475,7 @@
 									<a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i class="side-menu__icon fe fe-users"></i><span class="side-menu__label">مدیریت بخش ها</span><i class="angle fe fe-chevron-right"></i></a>
 									<ul class="slide-menu">
 										<li class="side-menu-label1"><a href="javascript:void(0)">مدیریت بخش ها</a></li>
-										<li><a asp-controller="Quiz" asp-action="QuizManager" class="slide-item"> مدیریت آزمون</a></li>
+										<li><a asp-controller="QuizManagment" asp-action="QuizManager" class="slide-item"> مدیریت آزمون</a></li>
 										<li><a href="register.html" class="slide-item">مدیریت آموزش ها</a></li>
 										<li><a href="forgot-password.html" class="slide-item">مدیریت صفحات</a></li>
 										<li><a href="lockscreen.html" class="slide-item">گزارشات</a></li>
@@ -1147,6 +1147,7 @@
 	<!-- Switcher js -->
 	<script src="~/bootstrap/assets/switcher/js/switcher.js"></script>
 	<script src="~/js/scripts.js" asp-append-version="true"></script>
+	<script src="~/js/QuizManagment.js" asp-append-version="true"></script>
 
 	<!-- MORRIS CHART JS-->
 	<script src="~/bootstrap/assets/plugins/morris/raphael-min.js"></script>
