--- a/SimpleQuiz/Views/QuizManagment/QuizManager.cshtml
+++ b/SimpleQuiz/Views/QuizManagment/QuizManager.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<QuizInfo>
+@{
     ViewData["Title"] = "مدیریت آزمون ها";
     Layout = "_MainLayout";
 }
@@ -61,35 +62,49 @@
                     </div>
                     <div class="expanel-body">
                         <div class="row">
+                            <div class="custom-controls-stacked col-md-6 col-xl-6">
+                                <label class="custom-control custom-radio-md">
+                                    <input type="radio" class="custom-control-input" name="quizmanagment" value="quiz-update" onclick="SelectQuizAddOrUpdate()">
+                                    <span class="custom-control-label">ویرایش آزمون</span>
+                                </label>
+                            </div>
+                            <div class="custom-controls-stacked col-md-6 col-xl-6">
+                                <label class="custom-control custom-radio-md">
+                                    <input type="radio" class="custom-control-input" name="quizmanagment" value="quiz-add" onclick="SelectQuizAddOrUpdate()">
+                                    <span class="custom-control-label">ایجاد آزمون</span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row" id="quiz-update" style="display:none">
                             <div class="card-header">
                                 <h3 class="card-title">ویرایش آزمون</h3>
                             </div>
                             <div class="form-group select2-lg">
                                 <label class="form-label">انتخاب آزمون</label>
-                                <select name="country" class="form-control form-select form-select-lg select2" data-bs-placeholder="--انتخاب--">
-                                    <option value="br">Brazil</option>
-                                    <option value="cz">Czech Republic</option>
-                                    <option value="de">Germany</option>
-                                    <option value="pl" selected>Poland</option>
+                                <select name="quizselector" id="quizSelect" class="form-control form-select form-select-lg select2">
+                                    <option value="-1" selected>--انتخاب--</option>
+                                    @foreach(QuizInfo quiz in Model){
+                                        <option value="@quiz.ID">@quiz.QuizFarsiName</option>
+                                    }
                                 </select>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" id="quiz-add" style="display:none">
                             <div class="card-header">
-                                <h3 class="card-title">ایجاد آزمون</h3>
+                                <h3 class="card-title" id="add-title-name">ایجاد آزمون</h3>
                             </div>
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-6 col-md-6">
                                         <div class="form-group">
                                             <label class="form-label">نام فارسی آزمون <span class="text-red">*</span></label>
-                                            <input type="text" class="form-control" placeholder="نام فارسی آزمون">
+                                            <input type="text" class="form-control" id="quizFaName" placeholder="نام فارسی آزمون">
                                         </div>
                                     </div>
                                     <div class="col-sm-6 col-md-6">
                                         <div class="form-group">
                                             <label class="form-label">نام انگلیسی آزمون <span class="text-red">*</span></label>
-                                            <input type="text" class="form-control" placeholder="نام انگلیسی آزمون">
+                                            <input type="text" class="form-control" id="quizEnName" placeholder="نام انگلیسی آزمون">
                                         </div>
                                     </div>
                                     <div class="col-md-12">
@@ -102,7 +117,7 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="form-label">نوع آزمون <span class="text-red">*</span></label>
-                                            <select class="form-control form-select select2" data-bs-placeholder="Select">
+                                            <select class="form-control form-select select2" id="quizType" data-bs-placeholder="Select">
                                                 <option label="Select">--انتخاب--</option>
                                                 <option value="1">تشریحی</option>
                                                 <option value="2">چهار گزینه ای</option>
@@ -113,24 +128,24 @@
                                     <div class="col-sm-6 col-md-6">
                                         <div class="form-group">
                                             <label class="form-label">حداقل نمره <span class="text-red">*</span></label>
-                                            <input type="number" class="form-control" placeholder="حداقل نمره کسب شده برای تایید در آزمون">
+                                            <input type="number" class="form-control" id="quizMinScore" placeholder="حداقل نمره کسب شده برای تایید در آزمون">
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-md-4">
                                         <div class="form-group">
                                             <label class="form-label">تعداد سوالات <span class="text-red">*</span></label>
-                                            <input type="number" class="form-control" placeholder="تعداد سوالات">
+                                            <input type="number" class="form-control" id="quizNOQ" placeholder="تعداد سوالات">
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-md-4">
                                         <div class="form-group">
                                             <label class="form-label">زمان آزمون <span class="text-red">*</span></label>
-                                            <input type="number" class="form-control" placeholder="زمان آزمون(دقیقه)">
+                                            <input type="number" class="form-control" id="quizTime" placeholder="زمان آزمون(دقیقه)">
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-md-4 form-group" style="padding: 42px">
                                         <label class="custom-switch form-switch mb-0">
-                                            <input type="checkbox" name="custom-switch-radio" class="custom-switch-input">
+                                            <input type="checkbox" name="custom-switch-radio" id="quizNegativeScore" class="custom-switch-input">
                                             <span class="custom-switch-indicator custom-switch-indicator-md"></span>
                                             <span class="custom-switch-description">نمره منفی</span>
                                         </label>
@@ -144,3 +159,6 @@
         </div>
     </div>
 </div>
+<script>
+    window.quizData = @Html.Raw(Json.Serialize(Model));
+</script>
