--- a/SimpleQuiz/Areas/Admin/Views/Blog/Blog_Post_Add.cshtml
+++ b/SimpleQuiz/Areas/Admin/Views/Blog/Blog_Post_Add.cshtml
@@ -24,7 +24,7 @@
                     <div class="row mb-4">
                         <label class="col-md-3 form-label">Categories :</label>
                         <div class="">
-                            <select name="country" class="form-control form-select select2" data-bs-placeholder="Select Country">
+                            <select name="country" class="form-control form-select " data-bs-placeholder="Select Country">
                                 <option value="br">Technology</option>
                                 <option value="cz">Travel</option>
                                 <option value="de">Food</option>
