--- a/SimpleQuiz/Views/Quiz/QuizOnline.cshtml
+++ b/SimpleQuiz/Views/Quiz/QuizOnline.cshtml
@@ -108,7 +108,7 @@
             </div>
             <div class="col mb-2">
                 <div class="btn-list">
-                    <button type="button" class="btn btn-primary mb-1" onclick="getCheckedOptions()">ثبت آزمون</button>
+                    <button id="btnSendQuiz" type="button" class="btn btn-primary mb-1" onclick="getCheckedOptions()">ثبت آزمون</button>
                 </div>
             </div>
         </div>
