--- a/SimpleQuiz/Views/QuizManagment/QuizManager.cshtml
+++ b/SimpleQuiz/Views/QuizManagment/QuizManager.cshtml
@@ -8,12 +8,12 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-lg-6">
-                <div class="expanel expanel-primary" disabled>
+                <div class="expanel expanel-primary">
                     <div class="expanel-heading">
                         <h3 class="expanel-title">مدیریت سوالات</h3>
                     </div>
                     <div class="expanel-body">
-                        <div class="row">
+                        @* <div class="row">
                             <div class="custom-controls-stacked col-md-6 col-xl-6">
                                 <label class="custom-control custom-radio-md">
                                     <input type="radio" class="custom-control-input" name="questionmanagment" value="question-update" onclick="SelectQuestionAddOrUpdate()">
@@ -26,7 +26,7 @@
                                     <span class="custom-control-label">سوال جدید</span>
                                 </label>
                             </div>
-                        </div>
+                        </div> *@
                         <div class="row">
                             <div class="btn-group mt-2 mb-2">
                                 <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown">
@@ -95,7 +95,7 @@
                             </div>
                             <div class="form-group select2-lg">
                                 <label class="form-label">انتخاب آزمون</label>
-                                <select id="quizSelect" class="form-control form-select form-select-lg select2">
+                                <select id="quizSelect" class="form-control form-select form-select-lg">
                                     <option value="-1" selected>--انتخاب--</option>
                                     @foreach(QuizInfo quiz in Model){
                                         <option value="@quiz.ID">@quiz.QuizFarsiName</option>
@@ -124,14 +124,14 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label class="form-label">توضیحات آزمون <span class="text-red">*</span></label>
-                                            <input type="text" class="form-control" placeholder="توضیحات آزمون(اختیاری)">
+                                            <input type="text" class="form-control" id="quizDescription" placeholder="توضیحات آزمون(اختیاری)">
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="form-label">نوع آزمون <span class="text-red">*</span></label>
-                                            <select class="form-control form-select select2" id="quizType">
+                                            <select class="form-control form-select" id="quizType">
                                                 <option value="-1" selected>--انتخاب--</option>
                                                 @foreach (QuizTypeViewModel quizType in ViewBag.QuizTypes)
                                                 {
@@ -154,7 +154,7 @@
                                     </div>
                                     <div class="col-sm-4 col-md-4">
                                         <div class="form-group">
-                                            <label class="form-label">زمان آزمون <span class="text-red">*</span></label>
+                                            <label class="form-label">زمان آزمون(دقیقه) <span class="text-red">*</span></label>
                                             <input type="number" class="form-control" id="quizTime" placeholder="زمان آزمون(دقیقه)">
                                         </div>
                                     </div>
@@ -167,7 +167,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <input type="button" class="btn btn-primary col-md-6 col-lx-6" value="ثبت" />
+                            <input type="button" class="btn btn-primary col-md-6 col-lx-6" id="quizManagmentSubmit" value="ثبت" />
                         </div>
                     </div>
                 </div>
@@ -175,6 +175,8 @@
         </div>
     </div>
 </div>
+<input type="hidden" id="quizId" runat="server"/>
 <script>
     window.quizData = @Html.Raw(Json.Serialize(Model));
 </script>
+<script src="~/js/QuizManagment.js" asp-append-version="true"></script>
