--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -7,15 +7,15 @@
 	<meta charset="UTF-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Sash – Bootstrap 5  Admin & Dashboard Template">
+	<meta name="description" content="Momad.ir – CMS  Admin & Dashboard">
 	<meta name="author" content="Spruko Technologies Private Limited">
-	<meta name="keywords" content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
+	<meta name="keywords" content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,sql,learn,programming,ui,ui kit.">
 
 	<!-- FAVICON -->
 	<link rel="shortcut icon" type="image/x-icon" href="~/bootstrap/assets/images/brand/favicon.ico" />
 
 	<!-- TITLE -->
-	<title>Sash – Bootstrap 5 Admin & Dashboard Template</title>
+	<title>Momad.ir – CMS  Admin & Dashboard</title>
 
 	<!-- BOOTSTRAP CSS -->
 	<link id="style" href="~/bootstrap/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -1159,7 +1159,6 @@
 	<!-- Switcher js -->
 	<script src="~/bootstrap/assets/switcher/js/switcher.js"></script>
 	<script src="~/js/scripts.js" asp-append-version="true"></script>
-	<script src="~/js/QuizManagment.js" asp-append-version="true"></script>
 
 	<!-- MORRIS CHART JS-->
 	<script src="~/bootstrap/assets/plugins/morris/raphael-min.js"></script>
