--- a/SimpleQuiz/Views/Shared/_MainLayout.cshtml
+++ b/SimpleQuiz/Views/Shared/_MainLayout.cshtml
@@ -1177,6 +1177,21 @@
 	<script src="~/bootstrap/assets/plugins/notify/js/jquery.growl.js"></script>
 	<script src="~/bootstrap/assets/plugins/notify/js/notifIt.js"></script>
 
+	<!-- DATA TABLE JS-->
+	<script src="~/bootstrap/assets/plugins/datatable/js/jquery.dataTables.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/dataTables.bootstrap5.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/dataTables.buttons.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/buttons.bootstrap5.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/jszip.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/pdfmake/pdfmake.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/pdfmake/vfs_fonts.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/buttons.html5.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/buttons.print.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/js/buttons.colVis.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/dataTables.responsive.min.js"></script>
+	<script src="~/bootstrap/assets/plugins/datatable/responsive.bootstrap5.min.js"></script>
+	<script src="~/bootstrap/assets/js/table-data.js"></script>
+
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 
